# DevOps-Course-Starter

./: .dockerignore  .env.test  .gitignore  .travis.yml  ApiAccess.py  Dockerfile  Item.py  README.md  TodoList_Tests.py  Vagrantfile  View_Model.py  app.py  pyproject.toml  test_View_Model_Unit.py  test_app_integration.py  test_selenium.py  wsgi.py
Documentation/: TodoAppComponentDiagram.drawio  TodoAppContainerDiagram.drawio  TodoAppContextDiagram.drawio  TodoContainerDiagram.drawio
templates/: index.html
