[tool.poetry]
name = "Todo App"
version = "0.1.0"
description = "A todo app for a Dev-Ops course"
authors = ["Tim Cook"]

[virtualenvs]
create = true
in-project = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


