[tool.poetry]
name = "Todo App"
version = "0.1.0"
description = "A todo app for a Dev-Ops course"
authors = ["Tim Cook"]

[virtualenvs]
create = true
in-project = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "1.1.1"
requests = "2.24.0"
astroid = "2.4.2"
autopep8 = "1.5.4"
certifi = "2020.6.20"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.3"
idna = "2.10"
isort = "5.5.3"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
pycodestyle = "2.6.0"
pylint = "2.6.0"
python-dotenv = "0.12.0"
six = "1.15.0"
toml = "0.10.1"
urllib3 = "1.25.10"
Werkzeug = "1.0.1"
wrapt = "1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


